Add store kiosk layer with creator panel